--- a/ui/html/base.tmpl
+++ b/ui/html/base.tmpl
@@ -15,6 +15,9 @@
 <h1><a href='/'>Snippetbox</a></h1>
 </header>
 {{template "nav" .}} 
+{{with .Flash}}
+<div class='flash'>{{.}}</div>
+{{end}}
 <main>
 {{template "main" .}} 
 </main>
